fixed whitespace in login page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,9 +24,12 @@
 }
 
 body {
-  min-height: 100rem;
+
 
   font-family: "Catamaran";
+}
+.loginpage{
+  min-height: 50rem;
 }
 h1 {
   font-size: 200px;
